# intercal

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  biome.json  desktop.ini  docker-compose.yml  docs.json  llms-full.txt  llms.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.changes/: 2026-06-04-foundation-scaffold.md  2026-06-04-plan-02-w1-source-adapters.md  2026-06-05-plan-02-claim-linking-audit.md  2026-06-05-plan-02-w3-extract-audit.md  2026-06-05-plan-02-w4-provider-audit.md  2026-06-05-plan-02-w5-embeddings-audit.md  2026-06-05-plan-03-w3-mcp-mount.md  2026-06-05-plan-03-w4-sdk.md  2026-06-05-plan-03-w5-delta-digest.md  2026-06-05-plan-03-w5-delta-factversions-audit.md  2026-06-05-plan-03-w5-delta-supersession-classification.md  2026-06-05-plan-03-w5-delta-until-axis-fix.md  2026-06-05-plan-03-w6-false-positive-guard.md  2026-06-05-plan-03-w6-tokenizer-edge-punctuation.md  2026-06-05-plan-03-w7-coverage-canonical-evidence.md  2026-06-05-plan-07-w1-secret-fanout.md  2026-06-05-plan-07-w3-pipeline-cd.md  2026-06-06-backfill-cursor-resume-scope.md  2026-06-06-backfill-execution.md  2026-06-06-dashboard-claim-source-link-policy.md  2026-06-06-phase-d-docs-status-closeout.md  2026-06-06-plan-03-w8-agent-surface-harness.md  2026-06-06-plan-04-w2-source-policy-ssrf.md  2026-06-06-plan-04-w4-feedback-request-id-bound.md  2026-06-06-plan-04-w4-feedback-review-records.md  2026-06-06-plan-04-w4-feedback-source-target-validation.md  2026-06-06-plan-04-w5-dispatch-owner-scope.md  2026-06-06-plan-04-w5-subscription-audit.md  2026-06-06-plan-04-w5-subscription-target-field-guard.md  2026-06-06-plan-04-w5-subscription-uuid-targets.md  2026-06-06-plan-04-w5-subscriptions.md  2026-06-06-plan-04-w6-observability-audit.md  2026-06-06-plan-04-w8-account-setup.md  (+24 more)
.github/: dependabot.yml
services/extract/: pyproject.toml
services/extract/src/intercal_extract/: __init__.py  __main__.py  cli.py  jobs.py
services/extract/tests/: test_extract_cli.py  test_w3_extract.py  test_w5_embeddings.py
services/ingest/: pyproject.toml
services/ingest/src/intercal_ingest/: __init__.py  __main__.py  cli.py  jobs.py  normalizer.py
services/ingest/tests/: test_ingest_cli.py  test_w1_source_adapters.py  test_w2_normalize.py
services/resolve/: pyproject.toml
services/resolve/src/intercal_resolve/: __init__.py  __main__.py  cli.py  jobs.py
services/resolve/tests/: test_resolve_cli.py  test_w6_resolve.py
services/shared/: pyproject.toml
services/shared/src/intercal_shared/: __init__.py  config.py  db.py  factory.py  llm_runtime.py  redaction.py  source_registry.py  ssrf.py
services/shared/src/intercal_shared/adapters/: __init__.py  embeddings_local.py  embeddings_openai.py  llm_anthropic.py  llm_gemini.py  llm_groq.py  llm_openai.py  queue_postgres.py  queue_redis.py  scheduler_local.py  source_github.py  source_historical.py  source_openalex.py  source_wikidata.py  storage_s3.py
services/shared/src/intercal_shared/contracts/: __init__.py  models.py
services/shared/src/intercal_shared/ports/: __init__.py  embeddings.py  llm.py  queue.py  scheduler.py  source.py  storage.py
services/shared/tests/: test_config.py  test_factory.py  test_historical_source_adapters.py  test_llm_runtime.py  test_redaction.py  test_ssrf.py  test_w4_providers.py
services/synthesize/: pyproject.toml
services/synthesize/src/intercal_synthesize/: __init__.py  __main__.py  cli.py  jobs.py
services/synthesize/tests/: test_synthesize_cli.py
(+140 files in other folders)
