[project]
name = "intercal-ingest"
version = "0.1.0"
description = "Intercal ingestion service — source adapters, document pipeline, and normalisation jobs."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "intercal-shared",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
]

[tool.uv.sources]
intercal-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intercal_ingest"]
