[project]
name = "intercal-synthesize"
version = "0.1.0"
description = "Intercal synthesis service — digest generation, freshness scoring, and subscriber notification."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "intercal-shared",
    "typer>=0.12.0",
]

[tool.uv.sources]
intercal-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intercal_synthesize"]
